tests/integration/errors/array/array-float-index.it
Array float index

- compilation error
=========
void main() {
    int b;
    int a[2];

    b = a[1.5];
    a[0.5] = b;
}
=========
<stdin>:5: error: extractor value must be an integer
<stdin>:6: error: extractor value must be an integer
